--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <?php
-// Simulación de datos dinámicos (puedes conectarte a una base de datos más adelante)
 $company_name = "Marck Business";
 $services = [
     "Consultoría Empresarial",
@@ -18,45 +17,40 @@ $services = [
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marck Business</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
-        /* Colores de la marca */
         :root {
-            --azul-marino: #003366;
-            --naranja: #ff6600;
-            --blanco: #ffffff;
-            --gris: #333333;
-            --gris-claro: #f7f7f7;
-            --azul-claro: #4f8fd1;
-            --naranja-claro: #ff8c3d;
+            --primary-color: #003366;
+            --secondary-color: #ff6600;
+            --background-light: #f5f5f5;
+            --text-dark: #333333;
+            --text-light: #ffffff;
+            --shadow: rgba(0, 0, 0, 0.1);
+            --gradient: linear-gradient(135deg, #003366, #4f8fd1);
         }
 
         body {
-            font-family: 'Candara', sans-serif;
+            font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: var(--gris-claro);
-            color: var(--gris);
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+            background-color: var(--background-light);
+            color: var(--text-dark);
         }
 
         header {
-            background-color: var(--azul-marino);
-            color: var(--blanco);
-            padding: 2rem 0;
+            background: var(--gradient);
+            color: var(--text-light);
+            padding: 2rem;
             text-align: center;
-            width: 100%;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+            position: relative;
+            overflow: hidden;
         }
 
         header img.logo {
-            width: 360px;
-            height: auto;
+            width: 150px;
             margin-bottom: 1rem;
+            border-radius: 50%;
+            border: 2px solid var(--text-light);
         }
 
         nav ul {
@@ -68,48 +62,86 @@ $services = [
             margin: 0;
         }
 
-        nav ul li {
-            display: inline;
-        }
-
         nav ul li a {
-            color: var(--blanco);
+            color: var(--text-light);
             text-decoration: none;
-            font-size: 1.1rem;
-            text-transform: uppercase;
             font-weight: bold;
+            padding: 0.5rem 1rem;
+            border-radius: 5px;
+            transition: background-color 0.3s ease, transform 0.3s ease;
         }
 
         nav ul li a:hover {
-            color: var(--naranja);
-            border-bottom: 2px solid var(--naranja);
-            padding-bottom: 5px;
+            background-color: var(--secondary-color);
+            transform: scale(1.1);
         }
 
         .section {
-            padding: 4rem 2rem;
-            background-color: var(--blanco);
+            padding: 3rem 1rem;
+            text-align: center;
+            background-color: var(--text-light);
             border-radius: 10px;
             margin: 2rem auto;
-            max-width: 80%;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            max-width: 800px;
+            box-shadow: 0 4px 15px var(--shadow);
         }
 
         .section h2 {
-            color: var(--naranja);
+            color: var(--primary-color);
             margin-bottom: 1rem;
         }
 
         .section p {
-            font-size: 1.1rem;
-            line-height: 1.6;
+            font-size: 1rem;
+            line-height: 1.8;
+        }
+
+        .section ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        .section ul li {
+            background: var(--background-light);
+            padding: 0.8rem;
+            margin: 0.5rem 0;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px var(--shadow);
         }
 
         footer {
-            background-color: var(--azul-marino);
-            color: var(--blanco);
+            background-color: var(--primary-color);
+            color: var(--text-light);
             text-align: center;
-            padding: 1.5rem;
+            padding: 2rem 1rem;
+        }
+
+        footer p {
+            margin: 0;
+        }
+
+        button, input, textarea {
+            border: none;
+            outline: none;
+            border-radius: 5px;
+            padding: 0.8rem 1rem;
+            margin: 1rem 0;
+            font-size: 1rem;
+            width: 80%;
+            max-width: 400px;
+            box-shadow: 0 4px 10px var(--shadow);
+        }
+
+        button {
+            background: var(--secondary-color);
+            color: var(--text-light);
+            cursor: pointer;
+            transition: transform 0.3s ease, background-color 0.3s ease;
+        }
+
+        button:hover {
+            background-color: #ff8c3d;
+            transform: scale(1.05);
         }
 
         .whatsapp-btn {
@@ -121,39 +153,19 @@ $services = [
             background-image: url('images/whats.png');
             background-size: cover;
             border-radius: 50%;
-            cursor: pointer;
-            z-index: 999;
+            box-shadow: 0 4px 10px var(--shadow);
+            transition: transform 0.3s ease;
+        }
+
+        .whatsapp-btn:hover {
+            transform: scale(1.2);
         }
     </style>
     <script>
-        // Datos dinámicos simulados
-        const companyName = "Marck Business";
-        const services = [
-            "Consultoría en eficientar procesos",
-            "Estrategia de Marketing",
-            "Programación de software",
-            "Actualizaciones de Software",
-            "Desarrollo de Software",
-            "Asesoría en Procesos de Producción",
-            "Enfoque personalizado a Restaurantes"
-        ];
-
-        function renderContent() {
-            document.getElementById("about-text").textContent =
-                "¡Bienvenido a Marck Business! Estamos comprometidos a darle soluciones sistemáticas para crecer su negocio.";
-
-            const servicesList = document.getElementById("services-list");
-            services.forEach(service => {
-                const listItem = document.createElement("li");
-                listItem.textContent = service;
-                servicesList.appendChild(listItem);
-            });
-
+        document.addEventListener('DOMContentLoaded', () => {
             document.getElementById("footer-text").textContent =
                 `© ${new Date().getFullYear()} Marck Business. Todos los derechos reservados.`;
-        }
-
-        window.onload = renderContent;
+        });
     </script>
 </head>
 <body>
@@ -170,20 +182,24 @@ $services = [
 
     <section id="about" class="section">
         <h2>Sobre nosotros</h2>
-        <p id="about-text"></p>
+        <p>En Marck Business estamos comprometidos a ayudarte a crecer con soluciones tecnológicas personalizadas.</p>
     </section>
 
     <section id="services" class="section">
-        <h2>Nuestros Servicios</h2>
-        <ul id="services-list"></ul>
+        <h2>Servicios</h2>
+        <ul>
+            <?php foreach ($services as $service): ?>
+                <li><?php echo htmlspecialchars($service); ?></li>
+            <?php endforeach; ?>
+        </ul>
     </section>
 
     <section id="contact" class="section">
         <h2>Contáctanos</h2>
         <form action="#" method="POST">
-            <input type="text" id="name" name="name" placeholder="Tu nombre" required>
-            <input type="email" id="email" name="email" placeholder="Tu correo" required>
-            <textarea id="message" name="message" placeholder="Escribe tu mensaje" required></textarea>
+            <input type="text" name="name" placeholder="Tu nombre" required>
+            <input type="email" name="email" placeholder="Tu correo" required>
+            <textarea name="message" placeholder="Tu mensaje" required></textarea>
             <button type="submit">Enviar</button>
         </form>
     </section>
