--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ $services = [
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marck Business</title>
+    <title><?= $company_name ?></title>
     <style>
         :root {
             --azul-marino: #003366;
@@ -43,17 +43,12 @@ $services = [
             padding: 2rem 0;
             text-align: center;
             width: 100%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         }
 
         header img.logo {
             width: 360px;
             height: auto;
             margin-bottom: 1rem;
-            border-radius: 0;
         }
 
         nav ul {
@@ -96,6 +91,9 @@ $services = [
         .section ul {
             list-style: none;
             padding: 0;
+            text-align: left;
+            margin: 0 auto;
+            max-width: 600px;
         }
 
         .section ul li {
@@ -110,8 +108,6 @@ $services = [
             text-align: center;
             padding: 1.5rem;
             width: 100%;
-            position: relative;
-            bottom: 0;
         }
 
         .whatsapp-btn {
@@ -148,7 +144,7 @@ $services = [
         <h2>Nuestros Servicios</h2>
         <ul>
             <?php foreach ($services as $service): ?>
-                <li><?= $service ?></li>
+                <li><?= htmlspecialchars($service) ?></li>
             <?php endforeach; ?>
         </ul>
     </section>
