--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <?php
-// Datos dinámicos simulados (puedes conectarte a una base de datos más adelante)
+// Simulación de datos dinámicos (puedes conectarte a una base de datos más adelante)
 $company_name = "Marck Business";
 $services = [
     "Consultoría Empresarial",
@@ -17,19 +17,21 @@ $services = [
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marck Business</title>
+    <title><?php echo $company_name; ?></title>
     <style>
-        /* Paleta de colores */
+        /* Colores de la marca */
         :root {
-            --azul-marino: #003366;
-            --naranja: #ff6600;
-            --blanco: #ffffff;
-            --gris: #333333;
-            --gris-claro: #f7f7f7;
+            --azul-marino: #003366; /* Azul marino oscuro */
+            --naranja: #ff6600; /* Naranja */
+            --blanco: #ffffff; /* Blanco */
+            --gris: #333333; /* Gris oscuro para texto */
+            --gris-claro: #f7f7f7; /* Gris claro para fondos */
+            --azul-claro: #4f8fd1; /* Azul claro */
+            --naranja-claro: #ff8c3d; /* Naranja más suave */
         }
 
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Candara', sans-serif;
             margin: 0;
             padding: 0;
             background-color: var(--gris-claro);
@@ -42,106 +44,198 @@ $services = [
         header {
             background-color: var(--azul-marino);
             color: var(--blanco);
+            padding: 2rem 0;
             text-align: center;
-            padding: 20px 0;
             width: 100%;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
-        header img {
+        header img.logo {
             width: 360px;
             height: auto;
+            margin-bottom: 1rem;
         }
 
         nav ul {
             list-style: none;
             padding: 0;
-            margin: 0;
             display: flex;
             justify-content: center;
-            gap: 20px;
+            gap: 2rem;
+            align-items: center;
+            width: 100%;
+            margin: 0;
+        }
+
+        nav ul li {
+            display: inline;
         }
 
         nav ul li a {
             color: var(--blanco);
             text-decoration: none;
-            font-weight: bold;
+            font-size: 1.1rem;
             text-transform: uppercase;
+            letter-spacing: 1px;
+            font-weight: bold;
         }
 
         nav ul li a:hover {
             color: var(--naranja);
+            border-bottom: 2px solid var(--naranja);
+            padding-bottom: 5px;
+        }
+
+        .nav-buttons {
+            display: flex;
+            gap: 1rem;
+            margin-top: 1rem;
+        }
+
+        .nav-buttons button {
+            background-color: var(--azul-claro);
+            color: var(--blanco);
+            padding: 0.8rem 2rem;
+            border-radius: 30px;
+            font-size: 1.1rem;
+            cursor: pointer;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+
+        .nav-buttons button:hover {
+            background-color: var(--naranja);
+            transform: scale(1.05);
         }
 
         .section {
+            padding: 4rem 2rem;
+            text-align: center;
             background-color: var(--blanco);
             border-radius: 10px;
-            padding: 20px;
-            margin: 20px auto;
-            max-width: 800px;
-            text-align: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin: 2rem auto;
+            max-width: 80%;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
         }
 
         .section h2 {
-            color: var(--azul-marino);
+            color: var(--naranja);
+            font-size: 2rem;
+            margin-bottom: 1rem;
         }
 
-        .section ul {
-            list-style: none;
-            padding: 0;
+        .section p, .section ul, .section textarea, .section form {
+            font-size: 1.1rem;
+            line-height: 1.6;
+            color: var(--gris);
         }
 
-        .section ul li {
-            background-color: var(--naranja);
-            color: var(--blanco);
-            margin: 10px 0;
-            padding: 10px;
-            border-radius: 5px;
+        .section button {
+            margin-top: 1rem;
         }
 
         footer {
             background-color: var(--azul-marino);
             color: var(--blanco);
             text-align: center;
-            padding: 10px;
+            padding: 1.5rem;
+            box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.1);
+            position: relative;
+            bottom: 0;
             width: 100%;
         }
+
+        .whatsapp-btn {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            width: 60px;
+            height: 60px;
+            background-image: url('images/whats.png');
+            background-size: cover;
+            border-radius: 50%;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            cursor: pointer;
+            z-index: 999;
+            transition: transform 0.3s ease;
+        }
     </style>
+    <script>
+        function addComment(event) {
+            event.preventDefault();
+            const commentBox = document.getElementById("commentBox");
+            const comment = document.getElementById("comment").value;
+            if (comment.trim() !== "") {
+                const newComment = document.createElement("p");
+                newComment.textContent = comment;
+                commentBox.appendChild(newComment);
+                document.getElementById("comment").value = "";
+            }
+        }
+    </script>
 </head>
 <body>
     <header>
-        <img src="images/Diseño%20sin%20título.png" alt="Logo de Marck Business">
+        <a href="https://wa.me/50258140621" target="_blank">
+            <img class="logo" src="images/Diseño%20sin%20título.png" alt="Logo">
+        </a>
         <nav>
             <ul>
-                <li><a href="#about">Sobre Nosotros</a></li>
+                <li><a href="#about">Sobre nosotros</a></li>
                 <li><a href="#services">Servicios</a></li>
-                <li><a href="#contact">Contacto</a></li>
+                <li><a href="#videos">Ver Videos</a></li>
+                <li><a href="#comments">Comentarios</a></li>
+                <li><a href="#demo">Descargar Demo</a></li>
             </ul>
         </nav>
     </header>
 
     <section id="about" class="section">
-        <h2>Sobre Nosotros</h2>
-        <p>En Marck Business, ofrecemos soluciones estratégicas para el crecimiento empresarial.</p>
+        <h2>Sobre nosotros</h2>
+        <p>¡Bienvenido a Marck Business! Estamos enfocados en ayudar a solucionar problemas sistemáticos y eficientar procesos de tu negocio.</p>
     </section>
 
     <section id="services" class="section">
         <h2>Servicios</h2>
         <ul>
-            <?php foreach ($services as $service): ?>
-                <li><?= htmlspecialchars($service) ?></li>
+            <?php foreach ($services as $service) : ?>
+                <li><?php echo $service; ?></li>
             <?php endforeach; ?>
         </ul>
     </section>
 
-    <section id="contact" class="section">
-        <h2>Contacto</h2>
-        <p>Para más información, contáctanos al +502 58140621.</p>
+    <section id="videos" class="section">
+        <h2>Ver Videos</h2>
+        <ul>
+            <li><a href="#">Video 1</a></li>
+            <li><a href="#">Video 2</a></li>
+            <li><a href="#">Video 3</a></li>
+        </ul>
+    </section>
+
+    <section id="comments" class="section">
+        <h2>Comentarios</h2>
+        <form onsubmit="addComment(event)">
+            <textarea id="comment" placeholder="Escribe tu comentario aquí..." required></textarea><br>
+            <button type="submit">Comentar</button>
+        </form>
+        <div id="commentBox">
+            <h3>Comentarios de los usuarios:</h3>
+        </div>
+    </section>
+
+    <section id="demo" class="section">
+        <h2>Descargar Demo</h2>
+        <button onclick="window.location.href='demo.zip'">Descargar Ahora</button>
     </section>
 
     <footer>
-        <p>© <?= date("Y") ?> Marck Business. Todos los derechos reservados.</p>
+        <p>© <?php echo date("Y"); ?> MarckBusiness. Todos los derechos reservados.</p>
     </footer>
+
+    <div class="whatsapp-btn" onclick="window.location.href='https://wa.me/50258140621'"></div>
 </body>
 </html>
