--- a/index.html
+++ b/index.html
@@ -136,7 +136,12 @@ $services = [
 </head>
 <body>
     <header>
-        <img src="images/Diseño%20sin%20título.png" alt="Logo de Marck Business">
+        <!-- Logo con enlace a WhatsApp -->
+        <a href="https://wa.me/50258140621" target="_blank">
+            <img src="images/Diseño%20sin%20título.png" alt="Logo de Marck Business">
+        </a>
+        
+        <!-- Barra de navegación -->
         <nav>
             <ul>
                 <li><a href="#about">Sobre Nosotros</a></li>
