--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@ $services = [
 </head>
 <body>
     <header>
-        <img src="images/Diseño%20sin%20título.png" alt="Logo de Marck Business">
+        <!-- Aquí se carga la imagen del logo desde la carpeta "images" -->
+        <img src="images/Diseño%20sin%20titulo.png" alt="Logo de Marck Business">
         <nav>
             <ul>
                 <li><a href="#about">Sobre Nosotros</a></li>
