--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ $services = [
             --blanco: #ffffff;
             --gris: #333333;
             --gris-claro: #f7f7f7;
+            --negro: #000000; /* Se define el color negro */
         }
 
         body {
@@ -37,7 +38,7 @@ $services = [
         }
 
         header {
-            background-color: var(--azul-marino);
+            background-color: var(--negro); /* Cambio el color de fondo a negro */
             color: var(--blanco);
             text-align: center;
             padding: 1.5rem 1rem;
@@ -198,4 +199,3 @@ $services = [
     <div class="whatsapp-btn" onclick="window.open('https://wa.me/50258140621', '_blank')"></div>
 </body>
 </html>
-
