--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ $services = [
     </section>
 
     <footer>
-        <p>© <?= date("Y"); ?> Marck Business. Todos los derechos reservados.</p>
+        <p>© <?= date("Y"); ?> Marck Business. Todos los derechos reservados -2024-.</p>
     </footer>
 
     <div class="whatsapp-btn" onclick="window.open('https://wa.me/50258140621', '_blank')"></div>
