--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <?php
 // Simulación de datos dinámicos (puedes conectarte a una base de datos más adelante)
-$company_name = "Marck Business";
+"Marck Business";
 $services = [
     "Consultoría Empresarial",
     "Estrategia de Marketing",
