--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ $services = [
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><?php echo $company_name; ?></title>
+    <title><MarckBusiness; ?></title>
     <style>
         :root {
             --azul-marino: #003366;
