--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <?php
 // Simulación de datos dinámicos (puedes conectarte a una base de datos más adelante)
-"Marck Business";
+$company_name = "Marck Business";
 $services = [
     "Consultoría Empresarial",
     "Estrategia de Marketing",
@@ -17,7 +17,7 @@ $services = [
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MarckBusiness</title>
+    <title><?php echo $company_name; ?></title>
     <style>
         :root {
             --azul-marino: #003366;
@@ -25,7 +25,8 @@ $services = [
             --blanco: #ffffff;
             --gris: #333333;
             --gris-claro: #f7f7f7;
-            --negro: #000000; /* Se define el color negro */
+            --negro: #000000;
+            --gradiente: linear-gradient(135deg, #003366, #ff6600);
         }
 
         body {
@@ -35,13 +36,17 @@ $services = [
             background-color: var(--gris-claro);
             color: var(--gris);
             line-height: 1.6;
+            scroll-behavior: smooth;
         }
 
         header {
-            background-color: var(--negro); /* Cambio el color de fondo a negro */
+            background: var(--gradiente);
             color: var(--blanco);
             text-align: center;
             padding: 1.5rem 1rem;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
         }
 
         header img {
@@ -60,10 +65,6 @@ $services = [
             gap: 1rem;
         }
 
-        nav ul li {
-            flex: 1;
-        }
-
         nav ul li a {
             text-decoration: none;
             color: var(--blanco);
@@ -72,8 +73,6 @@ $services = [
             border: 2px solid var(--blanco);
             border-radius: 5px;
             transition: background-color 0.3s ease, color 0.3s ease;
-            text-align: center;
-            display: block;
         }
 
         nav ul li a:hover {
@@ -89,6 +88,14 @@ $services = [
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             max-width: 90%;
+            opacity: 0;
+            transform: translateY(50px);
+            transition: all 0.5s ease;
+        }
+
+        .section.active {
+            opacity: 1;
+            transform: translateY(0);
         }
 
         .section h2 {
@@ -111,7 +118,7 @@ $services = [
         }
 
         footer {
-            background-color: var(--azul-marino);
+            background: var(--gradiente);
             color: var(--blanco);
             text-align: center;
             padding: 1rem;
@@ -131,13 +138,23 @@ $services = [
             cursor: pointer;
         }
 
+        .video-section {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 2rem;
+        }
+
+        .video-section video {
+            width: 90%;
+            max-width: 600px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        }
+
         @media (max-width: 600px) {
             nav ul {
                 flex-direction: column;
-            }
-
-            nav ul li {
-                width: 100%;
             }
 
             header img {
@@ -149,13 +166,13 @@ $services = [
 </head>
 <body>
     <header>
-        <!-- Aquí se carga la imagen del logo desde la carpeta "images" -->
         <img src="images/Diseño%20sin%20titulo.png" alt="Logo de Marck Business">
         <nav>
             <ul>
                 <li><a href="#about">Sobre Nosotros</a></li>
                 <li><a href="#services">Servicios</a></li>
-                <li><a href="#new-services">Nuestros Nuevos Servicios</a></li> <!-- Nueva sección de servicios -->
+                <li><a href="#new-services">Nuestros Nuevos Servicios</a></li>
+                <li><a href="#videos">Videos</a></li>
                 <li><a href="#contact">Contacto</a></li>
             </ul>
         </nav>
@@ -175,7 +192,6 @@ $services = [
         </ul>
     </section>
 
-    <!-- Nueva sección de servicios -->
     <section id="new-services" class="section">
         <h2>Servicios Adicionales</h2>
         <ul>
@@ -187,15 +203,39 @@ $services = [
         </ul>
     </section>
 
+    <section id="videos" class="section video-section">
+        <h2>Videos</h2>
+        <video src="images/video1.mp4" controls></video>
+        <video src="images/video2.mp4" controls></video>
+    </section>
+
     <section id="contact" class="section">
         <h2>Contacto</h2>
         <p>Para más información, contáctanos al <strong>+502 58140621</strong>.</p>
     </section>
 
     <footer>
-        <p>© <?= date("Y"); ?> Marck Business. Todos los derechos reservados -2024-.</p>
+        <p>© <?= date("Y"); ?> Marck Business. Todos los derechos reservados.</p>
     </footer>
 
     <div class="whatsapp-btn" onclick="window.open('https://wa.me/50258140621', '_blank')"></div>
+
+    <script>
+        const sections = document.querySelectorAll('.section');
+
+        const observer = new IntersectionObserver((entries) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.classList.add('active');
+                }
+            });
+        }, {
+            threshold: 0.3
+        });
+
+        sections.forEach(section => {
+            observer.observe(section);
+        });
+    </script>
 </body>
 </html>
