--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ $services = [
         }
 
         header {
-            background: var(--gradiente);
+            background-color: var(--negro);
             color: var(--blanco);
             text-align: center;
             padding: 1.5rem 1rem;
@@ -63,6 +63,12 @@ $services = [
             flex-wrap: wrap;
             justify-content: center;
             gap: 1rem;
+            overflow-x: auto;
+            white-space: nowrap;
+        }
+
+        nav ul li {
+            flex: none;
         }
 
         nav ul li a {
@@ -73,6 +79,7 @@ $services = [
             border: 2px solid var(--blanco);
             border-radius: 5px;
             transition: background-color 0.3s ease, color 0.3s ease;
+            display: inline-block;
         }
 
         nav ul li a:hover {
